[package]
name = "rusty-utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# bin:

[[bin]]
name = "rusty-utilities"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
derive = "1.0.0"
ffmpeg-next = "6.0.0"
